﻿w17 06.02.2014 01:14:29 +0400 - build 3797

1. vc++ 2010 fix

drkns 05.02.2014 20:45:24 +0200 - build 3796

1. Уточнение 3794.

svs 05.02.2014 12:25:36 +0400 - build 3795

1. SQLite 3.8.3

drkns 05.02.2014 09:43:50 +0200 - build 3794

1. Analyzer warnings.

2. Рефакторинг.

drkns 03.02.2014 20:20:22 +0200 - build 3793

1. 0002593: Far Manager v3.0 build 3791 x86 (3792) некорректно работает выделение блока.

drkns 03.02.2014 08:35:23 +0200 - build 3792

1. Уточнение 3791.

drkns 02.02.2014 17:48:43 +0200 - build 3791

1. Рефакторинг.

3. Убрана перегрузка new/delete в Release, уточнена в Debug.

3. PVS & cppcheck warnings.

drkns 31.01.2014 08:42:27 +0200 - build 3790

1. 0002588: При изменении каталога в диалоге и нажатии Enter переходим в прежний каталог

drkns 29.01.2014 23:43:43 +0200 - build 3789

1. Во имя перфекционизма не запрашиваем информацию о кодовых страницах до тех пор, пока она не понадобится.

shmuel 29.01.2014 18:45:16 +0200 - build 3788

1. Рефакторинг в системе макросов.

zg 27.01.2014 21:37:49 +0200 - build 3787

1. 0002579: DM_GETTEXT в некоторых случаях возвращает мусор (LuaFAR)

drkns 27.01.2014 21:09:26 +0200 - build 3786

1. 0002578: Проблема выделения памяти при поиске с фильтром

zg 25.01.2014 04:09:09 +0200 - build 3785

1. 0002567: навигация по архиву после поиска
   в SetDirectoryW передавался путь со слэшем на конце.

drkns 21.01.2014 22:47:59 +0200 - build 3784

1. 0002568: Exception при попытке ввода строки в поля рассчитанные на числовые значения

w17 21.01.2014 23:14:25 +0400 - build 3783

1. M#2569: В диалоге настроек Viewer неверно работает шорткат AltM

shmuel 21.01.2014 19:26:55 +0200 - build 3782

1. Рефакторинг в системе макросов.

drkns 19.01.2014 23:03:16 +0200 - build 3781

1. #0002294: Удален неиспользуемый код.

drkns 19.01.2014 21:18:14 +0200 - build 3780

1. Уточнение 3779.

drkns 19.01.2014 19:58:42 +0200 - build 3779

1. PVS & cppcheck warnings.

2. Рефакторинг.

drkns 19.01.2014 02:39:29 +0200 - build 3778
