@@ -1,4 +1,9 @@
-﻿w17 06.02.2014 01:14:29 +0400 - build 3797
+﻿zg 06.02.2014 23:38:11 +0200 - build 3798
+
+1. DM_GETDLGITEM для элементов DI_LISTBOX и DI_COMBOBOX возвращает текущий список, а не список,
+   которым они инициализировались при создании.
+
+w17 06.02.2014 01:14:29 +0400 - build 3797
 
 1. vc++ 2010 fix
 
